--- a/dashboard.html
+++ b/dashboard.html
@@ -70,8 +70,8 @@ body{
 
 <div class="box">
   <h3>Wallet Balance</h3>
-  <p><b>inr:</b> 0</p>
-  <a class="btn" href="/UpcoinX/withdrawal.html">Withdraw inr</a>
+  <p><b>INR:</b> 0</p>
+  <a class="btn" href="/UpcoinX/withdrawal.html">Withdraw INR</a>
 </div>
 
 <div class="box">
