--- a/invest.html
+++ b/invest.html
@@ -1,70 +1,104 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Invest - UpcoinX</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+body{
+  margin:0;
+  font-family:Arial, sans-serif;
+  background:#0b2a55;
+  color:#fff;
+}
+nav{
+  background:#08306b;
+  padding:12px;
+  display:flex;
+  justify-content:space-around;
+}
+nav a{
+  color:#fff;
+  text-decoration:none;
+  font-weight:bold;
+}
+.container{
+  padding:15px;
+}
+.card{
+  background:#123c7a;
+  padding:15px;
+  border-radius:10px;
+}
+.plan{
+  background:#0f4aa8;
+  padding:12px;
+  border-radius:8px;
+  margin-top:12px;
+}
+button{
+  width:100%;
+  padding:10px;
+  margin-top:8px;
+  border:none;
+  border-radius:6px;
+  font-size:16px;
+  font-weight:bold;
+  background:#22c55e;
+  cursor:pointer;
+}
+</style>
+</head>
+
+<body>
+
+<nav>
+<a href="dashboard.html">Home</a>
+<a href="add-fund.html">Add Fund</a>
+<a href="withdraw.html">Withdraw</a>
+<a href="invest.html">Invest</a>
+<a href="support.html">Support</a>
+</nav>
+
+<div class="container">
+<div class="card">
+<h2>Investment Plans</h2>
+
+<div class="plan">
+<p>Invest ₹100 → Get ₹250</p>
+<button onclick="investNow(100,250)">Invest ₹100</button>
+</div>
+
+<div class="plan">
+<p>Invest ₹300 → Get ₹700</p>
+<button onclick="investNow(300,700)">Invest ₹300</button>
+</div>
+
+<div class="plan">
+<p>Invest ₹1000 → Get ₹1800</p>
+<button onclick="investNow(1000,1800)">Invest ₹1000</button>
+</div>
+
+</div>
+</div>
+
 <script>
-let wallet = Number(localStorage.getItem("wallet")) || 0;
-let history = JSON.parse(localStorage.getItem("investHistory")) || [];
+function investNow(amount, profit){
+  let wallet = Number(localStorage.getItem("balance")) || 0;
 
-function investNow(){
-    let amt = Number(document.getElementById("amount").value);
-    let profit = 0;
-    let total = 0;
+  if(wallet < amount){
+    alert("Insufficient balance");
+    return;
+  }
 
-    if(amt < 100){
-        alert("Minimum investment ₹100");
-        return;
-    }
+  wallet = wallet - amount + profit;
+  localStorage.setItem("balance", wallet);
 
-    if(wallet < amt){
-        alert("Insufficient balance");
-        return;
-    }
-
-    // FIXED PROFIT LOGIC
-    if(amt === 100){
-        total = 250;
-    } 
-    else if(amt === 300){
-        total = 700;
-    }
-    else if(amt === 1000){
-        total = 1800;
-    }
-    else{
-        alert("Invalid investment amount");
-        return;
-    }
-
-    profit = total - amt;
-
-    wallet = wallet - amt + total;
-    localStorage.setItem("wallet", wallet);
-
-    history.push({
-        amount: amt,
-        profit: profit,
-        total: total,
-        time: new Date().toLocaleString()
-    });
-
-    localStorage.setItem("investHistory", JSON.stringify(history));
-
-    document.getElementById("inv").innerText = amt;
-    document.getElementById("profit").innerText = profit;
-    document.getElementById("total").innerText = total;
-    document.getElementById("resultBox").style.display = "block";
-
-    renderHistory();
+  alert("Investment Successful!\nProfit Added ₹" + profit);
+  window.location.href = "dashboard.html";
 }
-
-function renderHistory(){
-    let box = document.getElementById("history");
-    box.innerHTML = "<h3>Investment History</h3>";
-
-    history.forEach(h=>{
-        box.innerHTML += `
-            <div>
-                ₹${h.amount} → ₹${h.total}<br>
-                <small>${h.time}</small>
-            </div>`;
-    });
-}
-renderHistory();
 </script>
+
+</body>
+</html>
