--- a/dashboard.html
+++ b/dashboard.html
@@ -3,101 +3,59 @@
 <head>
 <meta charset="UTF-8">
 <title>UpcoinX Dashboard</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
 body{
-    margin:0;
-    font-family:Arial, sans-serif;
-    background:#0b1c2d;
-    color:#ffffff;
+  margin:0;
+  font-family:Arial, sans-serif;
+  background:#0b1c3d;
+  color:white;
 }
-.container{padding:15px}
+
+/* NAVBAR */
+.nav{
+  background:#122a7a;
+  padding:12px;
+  display:flex;
+  justify-content:space-around;
+  font-size:14px;
+}
+.nav a{
+  color:white;
+  text-decoration:none;
+  font-weight:bold;
+}
+
+/* CONTAINER */
+.container{
+  padding:15px;
+}
+
+/* CARD */
 .card{
-    background:#122a44;
-    padding:15px;
-    border-radius:10px;
-    margin-bottom:15px;
+  background:#122a7a;
+  padding:15px;
+  border-radius:8px;
+  margin-bottom:15px;
 }
-h2,h3{margin:0 0 10px}
-table{
-    width:100%;
-    border-collapse:collapse;
-    font-size:14px;
-}
-th,td{
-    padding:8px;
-    border-bottom:1px solid #2e4c6d;
-    text-align:left;
-}
-.amount{font-weight:bold}
-.green{color:#4caf50}
-.red{color:#ff5252}
+
+/* BUTTONS */
 .btn{
-    padding:10px 14px;
-    border:none;
-    border-radius:6px;
-    margin-right:8px;
-    cursor:pointer;
+  width:100%;
+  padding:12px;
+  margin-top:10px;
+  border:none;
+  border-radius:5px;
+  font-weight:bold;
+  font-size:15px;
 }
-.btn-blue{background:#2196f3;color:#fff}
-.btn-green{background:#4caf50;color:#fff}
-.btn-orange{background:#ff9800;color:#fff}
+.green{background:#28a745;color:white;}
+.blue{background:#007bff;color:white;}
+.orange{background:#f39c12;color:white;}
+.sky{background:#17a2b8;color:white;}
+.red{background:#dc3545;color:white;}
 </style>
 </head>
 
 <body>
-<div class="container">
-
-<!-- WALLET -->
-<div class="card">
-    <h3>Wallet Balance</h3>
-    <h2>₹ 23,000</h2>
-    <p>Total Invested: ₹10,000</p>
-    <button class="btn btn-green">Add Fund</button>
-    <button class="btn btn-blue">Withdraw</button>
-    <button class="btn btn-orange">Invest</button>
-</div>
-
-<!-- DEPOSIT HISTORY -->
-<div class="card">
-    <h3>Deposit History</h3>
-    <table>
-        <tr>
-            <th>Date</th>
-            <th>Amount</th>
-            <th>Status</th>
-        </tr>
-        <tr><td>04 Nov 2025</td><td class="amount green">₹500</td><td>Success</td></tr>
-        <tr><td>12 Nov 2025</td><td class="amount green">₹1,000</td><td>Success</td></tr>
-        <tr><td>25 Nov 2025</td><td class="amount green">₹2,000</td><td>Success</td></tr>
-        <tr><td>05 Dec 2025</td><td class="amount green">₹1,500</td><td>Success</td></tr>
-        <tr><td>18 Dec 2025</td><td class="amount green">₹3,000</td><td>Success</td></tr>
-        <tr><td>28 Dec 2025</td><td class="amount green">₹2,500</td><td>Success</td></tr>
-        <tr><td>05 Jan 2026</td><td class="amount green">₹4,000</td><td>Success</td></tr>
-        <tr><td>12 Jan 2026</td><td class="amount green">₹5,000</td><td>Success</td></tr>
-    </table>
-</div>
-
-<!-- WITHDRAWAL HISTORY -->
-<div class="card">
-    <h3>Withdrawal History</h3>
-    <table>
-        <tr>
-            <th>Date</th>
-            <th>Amount</th>
-            <th>Status</th>
-        </tr>
-        <tr><td>10 Nov 2025</td><td class="amount red">₹500</td><td>Completed</td></tr>
-        <tr><td>22 Nov 2025</td><td class="amount red">₹1,500</td><td>Completed</td></tr>
-        <tr><td>02 Dec 2025</td><td class="amount red">₹2,000</td><td>Completed</td></tr>
-        <tr><td>12 Dec 2025</td><td class="amount red">₹3,000</td><td>Completed</td></tr>
-        <tr><td>20 Dec 2025</td><td class="amount red">₹2,500</td><td>Completed</td></tr>
-        <tr><td>30 Dec 2025</td><td class="amount red">₹4,000</td><td>Completed</td></tr>
-        <tr><td>05 Jan 2026</td><td class="amount red">₹1,000</td><td>Completed</td></tr>
-        <tr><td>12 Jan 2026</td><td class="amount red">₹5,000</td><td>Completed</td></tr>
-    </table>
-</div>
-
-</div>
-</body>
-</html>
